# KokTurk

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  Project Aksu Neural Morphological Atomization for Turkish1.docx  README.md  dvc.yaml  params.yaml  pyproject.toml  setup.sh
.dvc/: config
.github/workflows/: ci.yml  full-test.yml  publish-shims.yml  release.yml
audit/: execution_log.md  honesty_cleanup_preflight.md  v1.0.0_final_report.md  v1.0.0_release_report.md  v1.0.0_release_report_v3.md
audit/benchmark_results/: inference_throughput.json  metrics.json
audit/halt_reports/: 2026-05-16-dualhead-em.md  2026-05-16-publish-credentials.md
compat/ariturk/: pyproject.toml
compat/ariturk/src/ariturk/: __init__.py
compat/kokturk/: pyproject.toml
configs/: config.yaml
configs/acquire/: bald_mad.yaml  entropy_baseline.yaml
configs/benchmark/: full_eval.yaml
configs/classify/: hybrid_pcag.yaml  textcnn.yaml
configs/data/: ingest.yaml  prelabel.yaml
configs/decode/: constrained.yaml  unconstrained.yaml
configs/eval/: minimal_pairs.yaml  polysemous_roots.yaml
configs/label_model/: skweak_hmm.yaml  snorkel_iid.yaml
configs/loss/: focal.yaml  label_smooth.yaml  sce.yaml
configs/train/: atomizer_charT.yaml  atomizer_gru.yaml  berturk_teacher.yaml  distillation.yaml  v5_conservative.yaml  v5_full.yaml  v5_noise_corrected.yaml  v6_augmented.yaml  v6_full.yaml  v6_hpo_best.yaml  v6_rdrop.yaml
configs/viz/: colorblind_safe.yaml
data/gold/: batch_001.jsonl  combined_gold.jsonl  tr_gold_morph_v1.conllu  tr_gold_morph_v1_stats.json
data/splits/: test.jsonl  val.jsonl
docs/: DATA_LICENSE_AUDIT.md  MIGRATION.md  MODEL_CARD.md  README.md.j2  TRAINING_DATA_PROVENANCE.md  project_flowchart.drawio  secrets_inventory.md
models/benchmark/: BENCHMARK_REPORT.md  bert_fasttext_results.json  classification_results.json  zeyrek_coverage.json
models/dualhead_v1_cpu/: best_model_metadata.json
models/v6/: ensemble_results.json
models/v6_retimed/: training_log.json
models/vocabs/: README.md  char_vocab.json  root_vocab.json  root_vocab_15K.json  root_vocab_2.5M.json  tag_vocab.json  word_vocab.json
notebooks/: 02_lf_analysis.ipynb
requirements/: annotate.txt  base.txt  dev.txt  train.txt
scripts/: benchmark_inference.py  download_berturk.py  download_ttc3600_raw.sh  eval_all_models.py  eval_disambiguator.py  eval_dualhead.py  eval_full_test.py  eval_one_model.py  eval_v4_models.py  ingest_metrics.py  measure_zeyrek_coverage.py  run_acceptance_suite.sh  run_eval_all.sh  validate_metrics_consistency.py
scripts/data/: deposit_zenodo.py  download_oscar_pilot.py  extrapolate_yield.py  fetch_sources.py  publish_huggingface.py  validate_dataset.py
scripts/truba/: build_singularity.sh  submit_ablations.sh  submit_augmented_train.sh  submit_autolabel.sh  submit_autolabel_pilot.sh  submit_benchmark.sh  submit_benchmark_v2.sh  submit_bert_fasttext_benchmark.sh  submit_competitor_benchmark.sh  submit_constrained_decode_eval.sh  submit_corpus_stats.sh  submit_ensemble.sh  submit_error_analysis.sh  submit_eval_all.sh  submit_fasttext_benchmark.sh  submit_focal_loss.sh  submit_full_eval.sh  submit_hpo.sh  submit_noise_audit.sh  submit_noise_sweep.sh  submit_preprocess.sh  submit_preprocess_aksu.sh  submit_rdrop_train.sh  submit_resource_gen.sh  submit_robustness.sh  submit_speed_benchmark.sh  (+27 more)
tests/: conftest.py  test_ariturk.py  test_compat_shims.py  test_kokturk.py  test_readme_architecture_diagram.py
(+217 files in other folders)
