[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kokturk"
version = "0.5.0"
description = "Neural Morphological Atomizer for Turkish"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Melik Kul"},
]
keywords = ["turkish", "morphology", "nlp", "tokenization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "zeyrek>=0.1.3",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
train = [
    "mlflow>=2.10.0",
    "optuna>=3.5.0",
]
benchmark = [
    "zeyrek>=0.1.3",
    "scipy>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kokturk*", "ariturk*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "TCH",  # type-checking
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function call in default arg (common in argparse)
    "SIM108", # ternary (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["kokturk", "ariturk", "benchmark", "train", "data"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "zeyrek.*",
    "mlflow.*",
    "torch.*",
    "numpy.*",
    "gensim.*",
    "optuna.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short"
markers = [
    "gpu: requires CUDA GPU (deselect with '-m not gpu')",
    "slow: takes >30s (deselect with '-m not slow')",
    "integration: requires external resources (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["src/kokturk", "src/benchmark", "src/train", "src/data"]
omit = [
    "**/__init__.py",
    "**/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
]
